TestRepo2/src/objects/Item_Category__c.object
<CustomObject>
    <description>POS Project: object that represents categories that can be assigned to catalog items</description>
    <fields>
        <fullName>Customer_Marketing_Category__c</fullName>
        <label>Customer Marketing Category</label>
        <picklist>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premiums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wearables</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friendly_Name__c</fullName>
        <label>Friendly Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Specification_ID__c</fullName>
        <externalId>true</externalId>
        <label>IMS Specification ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <label>Material Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Group__c</fullName>
        <label>Primary Group</label>
        <picklist>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premiums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wearables</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Type__c</fullName>
        <label>Primary Type</label>
        <picklist>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PREM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Item Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Friendly_Name__c</columns>
        <columns>Material_Code__c</columns>
        <columns>Primary_Type__c</columns>
        <columns>Primary_Group__c</columns>
        <columns>Customer_Marketing_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>